--- a/index.html
+++ b/index.html
@@ -633,12 +633,13 @@ body.avatar-overlay-open{overflow:hidden}
             <span class="sr-only" id="giftsCount">0</span>
           </button>
           <div class="inventory-metric" id="goldMetric" role="group" aria-label="Gold pieces total">
-            <span class="text">Gold</span>
             <span class="amount" id="goldValue">0</span>
+            <span class="text">GP</span>
+
           </div>
           <div class="inventory-metric" id="downtimeMetric" role="group" aria-label="Downtime days total">
-            <span class="text">Downtime</span>
             <span class="amount" id="downtimeValue">0</span>
+            <span class="text">DTD</span>
           </div>
         </div>
       </div>
