--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@ body.avatar-overlay-open{overflow:hidden}
         </div>
         <button id="downloadData" class="icon-btn download-btn" type="button" title="Save data.js" aria-label="Save data.js">
           <span class="save-icon" aria-hidden="true">
-            <img src="save.svg" alt="" width="20" height="20"/>
+            <img src="save-icon.png" alt="" width="20" height="20"/>
           </span>
           <span class="save-spinner" aria-hidden="true">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -628,7 +628,7 @@ body.avatar-overlay-open{overflow:hidden}
           </button>
           <button id="giftsBtn" class="inventory-link" type="button" title="View supernatural gifts" aria-label="View supernatural gifts">
             <span class="icon" aria-hidden="true">
-              <img src="gift-svgrepo-com.svg" alt="" width="24" height="24"/>
+              <img src="gift-icon.png" alt="" width="24" height="24"/>
             </span>
             <span class="sr-only" id="giftsCount">0</span>
           </button>
