--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-list .card::after{border-radius:0}
 .log-list .card.open,
 .log-list .card.open::before,
-.log-list .card.open::after,
+.log-list .card.open::after{border-radius:0}
 .log-list .card.editing,
 .log-list .card.editing::before,
 .log-list .card.editing::after{border-radius:var(--log-card-radius)}
@@ -204,7 +204,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-list .card:hover{--row-bg:rgba(15,23,42,.03)}
 .log-list .card:hover,.log-list .card.open{z-index:1}
 .log-list .card.open{--row-bg:#fff;--card-highlight-opacity:1}
-.log-list .card.open .card-hd{background:#f1f5f9;border-top-left-radius:var(--log-card-radius);border-top-right-radius:var(--log-card-radius)}
+.log-list .card.open .card-hd{background:#f1f5f9;border-top-left-radius:0;border-top-right-radius:0}
 .log-list .card.open::after{border-color:#eef1f7}
 .log-list .card.editing::after{border-color:#eef1f7}
 .log-list .card.editing .card-hd{background:var(--row-bg,#f1f5f9)}
@@ -214,7 +214,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-list .card .card-hd{padding:14px 20px;display:flex;align-items:flex-start;gap:16px;min-height:0;transition:background var(--dur) var(--ease),border-radius var(--dur) var(--ease)}
 .log-list .card .card-hd .card-tools{margin-left:auto;display:flex;align-items:center;gap:8px}
 .log-list .card-bd{border-top:1px solid rgba(148,163,184,.35);padding:0 20px;background:rgba(248,250,252,.85);transition:background-color var(--dur) var(--ease),border-color var(--dur) var(--ease),color var(--dur) var(--ease)}
-.log-list .card.open .card-bd{border-bottom-left-radius:var(--log-card-radius);border-bottom-right-radius:var(--log-card-radius)}
+.log-list .card.open .card-bd{border-bottom-left-radius:0;border-bottom-right-radius:0}
 .log-list .card .bd-in{padding:18px 0 20px}
 .log-list .card .edit-form{padding:18px 0 24px}
 .card:focus-visible{outline:2px solid rgba(100,116,139,.45);outline-offset:4px}
